# MattKavs

./: CMakeLists.txt  LICENSE  MattKavsConfig.cmake  PKGBUILD  README.md  build.sh  install-linux.sh
include/: colors.h  dataUtils.h  input.h
src/: colors.cpp  dataUtils.cpp  input.cpp
test/: test_colors.bak  test_colors.cpp  test_dataUtils.cpp  test_helpers.h  test_input.cpp
